# algokit-shared-config-test

./: .gitignore  README.md
.github/workflows/: node-pr.yml  node-prod-release.yml  node-release.yml  python-pr.yml  python-release.yml
node/: .releaserc.json  package.json  pnpm-lock.yaml
python/: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
python/algokit_shared_config_test/: __init__.py
python/tests/: test_version.py
