[project]
name = "algokit-shared-config-test"
version = "1.0.3"
description = "Test consumer for algokit-shared-config Python reusable workflows"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algokit_shared_config_test"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "poethepoet>=0.34.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.11.0",
]

[tool.poe.tasks]
docs-test = "echo ok"

[tool.poe.tasks.release-preview]
sequence = [
  { cmd = "uv run semantic-release version --print-last-released-tag" },
  { cmd = "uv run semantic-release version --print-tag --as-prerelease" },
]
help = "Preview current and next prerelease version"

[tool.poe.tasks.release-dry-run-alpha]
shell = "uv run semantic-release --noop -vv version --as-prerelease --prerelease-token alpha --print-tag"
help = "Dry-run alpha release (no changes made)"

[tool.poe.tasks.release-dry-run-beta]
shell = "uv run semantic-release --noop -vv version --as-prerelease --prerelease-token beta --print-tag"
help = "Dry-run beta release (no changes made)"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["algokit_shared_config_test"]

[tool.semantic_release]
version_variables = ["algokit_shared_config_test/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock && uv build"
commit_message = "{version}\n\n[skip ci] Automatically generated by python-semantic-release"
tag_format = "v{version}"
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
prerelease_token = "beta"

[tool.semantic_release.branches.alpha]
match = "alpha"
prerelease_token = "alpha"
prerelease = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"
